<resources>
    <string name="app_name">bsc_app</string>
    <string name="title_activity_login">login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Login</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="todo">TODO</string>
    <string name="welcome_to_n_business_solutions_center_n_free_support_to_local_businesses_n_from_business_student_advisors">Welcome to\n Business Solutions Center\n Free support to local businesses\n from Business Student Advisors</string>
    <string name="title_activity_navigation">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_register_user">RegisterUser</string>
    <string name="title_contact">Meet the Team</string>


    // contact_layout strings
    <string name="desc">The Business Solutions Centre team are eager and well-equipped to provide you with business solutions. Their areas of interest and expertise span a huge range of today\s key business concerns.</string>
    <string name="hanna">Hanna is studying Business Management with Project Management. As an advisor, she is passionate about helping others grow and reach their goals. She has been working on the Twitter strategy, writing reports and help sheets, and delivered virtual workshops. In short, Hanna believes the key to business success is consistency, communication and listening to stakeholders. Her areas of interest include project management, marketing, human behaviour, technology, economics, and the environment."</string>
    <string name="sofia">Sofia is studying BA (Hons) Business Management and her areas of interest include brand management, leadership, sustainability, and entrepreneurship. Sofia believes that precision and efficiency is the key to building a strong foundation in every business, while vision and close team building are necessary for its success. Whilst working for the Business Solutions Centre, Sofia has collaborated on creating content about Market Research and Consumer Behaviour, that was used to help in the relocation of traders from the Elephant and Castle Shopping Centre. Moreover, she has interviewed small business owners and created tailored reports on small businesses."</string>
    <string name="ariana">Ariana is studying BA (Hons) Marketing with Advertising and Digital Communications and her particular areas of interest include brand management, marketing research and advertising.

             Ariana believes the key to a successful business is a combination of a well-researched business plan, implementing a customer-centric approach, targeted marketing, a memorable brand, a strong network and most important of all, patience!

                Whilst working for the Business Solutions Centre, Ariana has been working with clients and businesses from the Elephant &amp; Castle Shopping Centre on Marketing subjects, helped organise a Social Media workshop pre-pandemic and managed the Business Solutions Centre Twitter account." </string>
    <string name="max">Max is a third year Accounting and Finances student.

Studying Accounting and Finance has given Max the chance to explore different subject interests. He particularly enjoys Financial Accounting and Finance/Investment.

Max was first inspired to study Accounting and Finance because of his love for numbers, to view data in a numerical form and through statistics. Max also believes the flexibility in an Accounting and Finance degree upon graduation is a huge advantage.

Max believes that within business the key to success is to please all key stake holders, to build up a personal relationship between a client and adviser and that this is achieved through outstanding interpersonal skills.

After graduating from LSBU Max is hoping to qualify as a chartered accountant and to work in Finance in The City." />
    </string>

    <string name="bscinfo">Students of LSBU Business School offer a free drop-in service to local businesses. A trained team of Student Advisers can help your business with advice on: small business accounting, marketing, social media and IT solutions. Student Advisers are backed up by University professional and academic staff.</string>

    <string name="involve">All Business Solutions Advisers are students in LSBU Business School. In addition to their up-to-date subject knowledge, the Advisers receive additional training and continuous support from LSBU staff to fully equip them to offer consultancy services in the Business Solutions Centre.

    The bespoke training all advisers must complete includes:

    professionalism and customer service
    advanced communication
    business report writing
    working in teams to solve real live business issues

    Student Advisers have the opportunity to:</string>

    <string name="contactinfo"> <br> London South Bank University </br>
    <br> Business Solutions Centre </br>
        <br> Clarence Centre for Enterprise and Innovation </br>
    <br> 126 London Road </br>
    <br>SE1 0AE </br>

     <br>Our email address: solutions@lsbu.ac.uk</br>   </string>

    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_main2">MainActivity2</string>

    // Service Layout Strings

    <string name="introtext">The Business Solutions Centre is a free student-led service for local businesses and entrepreneurs.

    If you have identified an area of the business mix that you need support in, a particular problem that you want to solve, or an opportunity that you want to evaluate, the student-led Business Solutions Centre can help you.</string>

    <string name="challTitle">
    Here are some of the challenges that our clients typically face:
    </string>

    <string name="challTxt">
    How can I use social media to support business growth?
    How can I write a business plan?
    How can I seek potential funding or resources?
    How can I market my business on a low marketing budget?
    How can I manage my business sales and expenses?
    </string>

    <string name="worksTitle">
    How it works
    </string>

    <string name="worksTxt">
    </string>

    <string name="areasTitle">
    Areas of expertise
    </string>

    <string name="aresTxt">
        Business development and planning
    Tax and small business accounting
    Marketing and social media
    Forecasting and costing
    Access to finance
    Project management
    Consumer behaviour and brand management
    </string>


</resources>